[project]
name = "flyrestarter"
version = "0.1.0"
description = "Restarter for Fly machines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "quart>=0.20.0",
    "quart-schema[pydantic]>=0.21.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.4",
]
