[project]
name = "flyrestarter"
version = "0.1.0"
description = "Restarter for Fly machines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "apscheduler>=3.11.0",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "quart>=0.20.0",
    "quart-schema[pydantic]>=0.21.0",
    "quart-wtforms>=1.0.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "logging-tree>=1.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
minversion = "8.3"
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
line_length = 88
